Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11853

Android: Changing keystore for signing doesn't request new password

    XMLWordPrintable

Details

    Description

      1. Set up signing with a keystore on a project
      2. Click "Sign package"
      3. Input the password
      4. Change the keystore to something else

      At this point I would expect for a new password to be requested and the alias etc. updated, but I have to uncheck and check the "Sign package" checkbox before it requests it again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes