Android: Fix changing keystore not asking for the password

Task-number: QTCREATORBUG-11853
Change-Id: Ib63744207beb5e6d0d0bdb0647c99b27d80d8b71
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>